// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    23
     
    expenses
     totalling 
    $2,352,342,342.34
  </h1>
</div>
`;
